--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "jotai": "^2.6.0",
-    "next": "14.0.4",
+    "next": "^14.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
